fixed main ul spacing

--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,7 @@ h1{
 h2{
 	font-size: 32px;
 	line-height: 40px;
-	margin: 30px 0 10px 0;
+	margin: 30px 0 20px 0;
 }
 h3{
 	font-family: "Newsreader";
@@ -610,13 +610,14 @@ main{
 }
 main img{
 	width: 100%;
-	margin: 30px 0;
+	margin: 10px 0 30px 0;
 }
 main p{
  font-family:'Newsreader';
 }
 
 main ul {
+	margin: 0;
 	padding: 0;
 }
 
